public class CorrectOption extends Option {
  public CorrectOption(Statement statement) {
    super(statement);
  }
}
