public class MultipleChoiceQuestion extends Question {
  public MultipleChoiceQuestion(Statement statement, Option... options) {
    super(statement, options);
  }
}
