public enum Selection {
  TRUE, FALSE
}
