@startuml
class CorrectOption

class MultipleChoiceQuestion

class Option {
  - statement: Statement
  + getStatement(): Statement
  + toString(): String
}

class Question {
  - score: int
  - statement: Statement
  - options: Option[]
  + grade(int): double
  + getStatement(): Statement
  + printOptions(): String
}

class Quiz {
  - questionCounter: int
  - name: String
  - questions: Question[]
  + getQuizPoints(): int
  + toString(): String
  + addQuestion(Question): void
  + getGrade(int[]): double
  + getQuestionCounter(): int
  + printQuiz(): String
}

enum Selection {
  + TRUE:
  + FALSE:
  + values(): Selection[]
  + valueOf(String): Selection
}

class Statement {
  - content: String
  + toString(): String
}

class Student {
  - name: String
  - quiz: Quiz
  - grade: double
  + printGrade(): String
  + answer(int[]): void
  + setQuiz(Quiz): void
}

class TrueFalseQuestion {
  + parseToOptions(Selection): Option[]
}

class MatchingQuestion {
  - columnA: MatchingColumn
  - columnB: MatchingColumn
  + getColumns(): MatchingColumn[]
  + printOptions(): String
}

class MatchingColumn {
  - options: MatchingColumnOption[]
  + getOptions(): Option[]
  + toString(): String
}

CorrectOption           --|>  Option

MultipleChoiceQuestion  --|>  Question
TrueFalseQuestion       --|>  Question
MatchingQuestion        --|>  Question
@enduml